--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -1,9 +1,13 @@
 ﻿<Window x:Class="dirwatcher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525"
+        Title="DirWatcher" Height="350" Width="525"
         DataContext="{StaticResource MainViewModel}">
     <Grid>
-        <TextBox Text="{Binding Log,Mode=OneWay}" Margin="10,36,10,0" TextWrapping="Wrap" Height="274" IsReadOnly="True"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBox Grid.Row="1" Text="{Binding Log,Mode=OneWay}" Margin="5" TextWrapping="NoWrap" IsReadOnly="True"/>
     </Grid>
 </Window>
