--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DirWatcher" Height="350" Width="525"
-        DataContext="{StaticResource MainViewModel}">
+        DataContext="{StaticResource MainViewModel}" Icon="dirwatcher.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
