--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -2,12 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DirWatcher" Height="350" Width="525"
-        DataContext="{StaticResource MainViewModel}" Icon="dirwatcher.ico">
+        DataContext="{StaticResource MainViewModel}" Icon="dirwatcher.ico"
+        Topmost="True">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="1" Text="{Binding Log,Mode=OneWay}" Margin="5" TextWrapping="NoWrap" IsReadOnly="True"/>
+        <TextBox Grid.Row="1" Text="{Binding Log,Mode=OneWay}" Margin="5" TextWrapping="NoWrap" IsReadOnly="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
     </Grid>
 </Window>
