--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -8,7 +8,9 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
         <TextBox Grid.Row="1" Text="{Binding Log,Mode=OneWay}" Margin="5" TextWrapping="NoWrap" IsReadOnly="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
+        <TextBlock Grid.Row="2" Margin="5" Text="{Binding EventCount,StringFormat=Events: {0},Mode=OneWay}"/>
     </Grid>
 </Window>
