--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -10,6 +10,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
+        <TextBox Grid.Row="0" Text="{Binding StartPath}"></TextBox>
         <TextBox Grid.Row="1" Text="{Binding Log,Mode=OneWay}" Margin="5" TextWrapping="NoWrap" IsReadOnly="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
         <TextBlock Grid.Row="2" Margin="5" Text="{Binding EventCount,StringFormat=Events: {0},Mode=OneWay}"/>
     </Grid>
