--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -10,7 +10,15 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="0" Text="{Binding StartPath}"></TextBox>
+        <TextBox Grid.Row="0">
+            <TextBox.Text>
+                <Binding Path="StartPath">
+                    <Binding.ValidationRules>
+                        <ExceptionValidationRule />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <TextBox Grid.Row="1" Text="{Binding Log,Mode=OneWay}" Margin="5" TextWrapping="NoWrap" IsReadOnly="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
         <TextBlock Grid.Row="2" Margin="5" Text="{Binding EventCount,StringFormat=Events: {0},Mode=OneWay}"/>
     </Grid>
