metro & clear button

--- a/dirwatcher/App.xaml
+++ b/dirwatcher/App.xaml
@@ -4,6 +4,15 @@
              xmlns:local="clr-namespace:dirwatcher"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <local:DirWatcherViewModel x:Key="MainViewModel"/>
+        <ResourceDictionary>
+            <local:DirWatcherViewModel x:Key="MainViewModel"/>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
