--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -1,16 +1,18 @@
-﻿<Window x:Class="dirwatcher.MainWindow"
+﻿<Controls:MetroWindow x:Class="dirwatcher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="DirWatcher" Height="350" Width="525"
         DataContext="{StaticResource MainViewModel}" Icon="dirwatcher.ico"
+        ShowTitleBar="True"
         Topmost="True">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="25"/>
+            <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="0">
+        <TextBox Grid.Row="0" Grid.ColumnSpan="2">
             <TextBox.Text>
                 <Binding Path="StartPath">
                     <Binding.ValidationRules>
@@ -19,7 +21,14 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <TextBox Grid.Row="1" Text="{Binding Log,Mode=OneWay}" Margin="5" TextWrapping="NoWrap" IsReadOnly="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
-        <TextBlock Grid.Row="2" Margin="5" Text="{Binding EventCount,StringFormat=Events: {0},Mode=OneWay}"/>
+        <TextBox Margin="5" Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding Log,Mode=OneWay}" TextWrapping="NoWrap" IsReadOnly="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
+        <Grid Grid.Row="2" Margin="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock VerticalAlignment="Center" Text="{Binding EventCount,StringFormat=Events: {0},Mode=OneWay}"/>
+            <Button Grid.Column="1" Command="{Binding Path=Clear}" Content="Clear"></Button>
+        </Grid>
     </Grid>
-</Window>
+</Controls:MetroWindow>
