--- a/dirwatcher/MainWindow.xaml
+++ b/dirwatcher/MainWindow.xaml
@@ -7,6 +7,7 @@
         ShowTitleBar="True"
         MinHeight="200"
         MinWidth="200"
+        IconBitmapScalingMode="NearestNeighbor"
         Topmost="True">
     <Grid>
         <Grid.RowDefinitions>
